  by setting the `permissiveMode` boolean option to `true` in your solrconfig.xml's
  IgnoreLargeDocumentProcessorFactory declaration. (Jason Gerlowski)

* SOLR-16392: A number of v2 "replica" endpoints have been updated to be more REST-ful, and hopefully, intuitive.
  ADDREPLICAPROP is now `PUT /api/collections/$coll/shards/$shard/replicas/$rep/properties/$prop {"value": $val}`

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------
(No changes)

Build
---------------------
* Upgrade forbiddenapis to 3.4 (Uwe Schindler)

Other Changes
---------------------
(No changes)

==================  9.1.0 ==================

New Features
---------------------
* SOLR-16246: Introduced pre-filtering in KnnQParser (Elia Porciani via Alessandro Benedetti).

* SOLR-16111: Add hl.queryFieldPattern support, an advanced alternative to the hl.requireFieldMatch boolean flag.
  (Christine Poerschke, David Smiley)

* SOLR-15921: Load jars in <solr-install-dir>/lib/ by default (janhoy)

* SOLR-16005: Support add/update/delete field types in Admin UI Schema page.  (Ahmet Can Kepenek, Eric Pugh)

* SOLR-15853: Admin UI support for managing Paramsets and using in Queries. (Betul Ince, Eric Pugh)

* SOLR-16096: Support createNodeSet parameter when creating collections in Admin UI.   (Eric Pugh)

* SOLR-14319: Add ability to specify replica types when creating collections in Admin UI. (Richard Goodman, Eric Pugh)

* SOLR-16282: CoreAdminHandler supports custom actions via solr.xml configuration. (Artem Abeleshev, Christine Poerschke)

* SOLR-15007: Add ability to roll up core level metrics to be node level metrics for a RequestHandler via configuration. (Justin Sweeney, David Smiley)

* SOLR-15715: Dedicated query coordinator nodes in the solr cluster (noble, Hitesh Khamesra, Ishan Chattopadhyaya)

Improvements
---------------------
* SOLR-15986: CommitUpdateCommand and SplitIndexCommand can write user commit metadata. (Bruno Roustant)
