@@ -482,8 +482,6 @@ http://localhost:8983/solr/admin/collections?action=LIST
 ====
 [.tab-label]*V2 API*
 
-With the v2 API, the `list` command is provided as part of the JSON data that contains the required parameters:
-
 [source,bash]
 ----
 curl -X GET http://localhost:8983/api/collections
